@@ -3,6 +3,7 @@
 2005-08-24
 	* More configure and makefile updates
 	* Added scale arg for net graphs
+	* Fixed bug in own_window stuff
 
 2005-08-23
 	* Added maximum_width
